--- a/weather-web/styles/Home.module.css
+++ b/weather-web/styles/Home.module.css
@@ -8,8 +8,10 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
+  max-width: 750px;
+  margin: 0 auto;
 }
 
 .footer {
@@ -28,84 +30,60 @@
   flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.inputsWrapper {
+  width: 100%;
+  /* background-color: red; */
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  /* justify-content: space-between; */
 }
 
-.card {
+.countrySelection{
+  margin-left: 0.5rem;
+  /* background-color: red; */
+  outline: 0;
+  border: 0;
+  border-radius: 5px;
+  /* padding: 0 0.5rem; */
+}
+
+.btnSearch{
+  margin-left: 0.5rem;
+  background-color: blue;
+  /* min-width: 100px; */
+  outline: 0;
+  cursor: pointer;
+  padding: 0 1rem;
+  border: 0;
+  border-radius: 5px;
+}
+
+.inputCity{
+  flex: 1;
+  height: 2.5rem;
+  background-color: transparent;
+  outline: none;
+  border: 1px solid #eaeaea;
+  border-radius: 5px;
+  padding: 1rem;
+}
+.result {
   margin: 1rem;
   padding: 1.5rem;
-  text-align: left;
+  width: 100%;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  border-radius: 5px;
+  min-height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
+.result h2 {
   margin: 0 0 1rem 0;
   font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+  text-align: center;
 }
 
 @media (max-width: 600px) {
@@ -116,14 +94,8 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  .card,
+  .result,
   .footer {
     border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
   }
 }
